<resources>
    <string name="app_name">EmployePortal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="employee_portal">Employee Portal</string>
    <string name="Profile">Profile</string>
    <string name="communication">Communication</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="check_notifications"><![CDATA[Check out all of the announcements & notifications.]]></string>
    <string name="pettycahs_header"><![CDATA[Request for Petty Cash & Get Paid]]></string>
    <string name="meals_entertainment"><![CDATA[Meals & Entertainment]]></string>


    <string-array name="expense">
        <item>Petty Cash Expense</item>
        <item>Lunch</item>
    </string-array>

    <string-array name="expense_type">
        <item>Type</item>
        <item>CASH</item>
    </string-array>
    <string-array name="payment_method">
        <item>Payment Method</item>
        <item>CASH</item>
    </string-array>
    <string name="title_activity_petty_cash">PettyCash</string>
    <string name="title_activity_pay_slips">PaySlips</string>
    <string name="monthly_income">Your monthly income deposited in your bank account.</string>
    <string name="title_activity_leaves">LeavesActivity</string>
    <string name="title_activity_document">DocumentActivity</string>
    <string name="document_content">You added 3 new documents in this month.</string>
    <string name="location">56 Park Ave, Scotch Plains, NJ 7076, Kenya</string>
    <string name="passport"><![CDATA[P<USALEONARD<<ALLEN<DWIGHT <<<<<<<<<<<<<<<<<<2869919765USA 7106059M2408013<<<<<<<<<<<<<<06]]></string>

</resources>
