<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/employee_portal"
            android:icon="@drawable/employeeportal"
            android:title="@string/employee_portal"/>
    </group>
    <group android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/Profile"
            android:icon="@drawable/portal"
            android:title="@string/Profile"/>
    </group>
    <group android:id="@+id/grp3" android:checkableBehavior="single">
        <item
            android:id="@+id/communication"
            android:icon="@drawable/communication"
            android:title="@string/communication"/>
    </group>
    <group android:id="@+id/grp4" android:checkableBehavior="single">
        <item
            android:id="@+id/more"
            android:icon="@drawable/more"
            
            android:title="@string/more"/>
    </group>
    <group android:id="@+id/grp5" android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/setting"
            android:title="@string/settings"/>
    </group>



</menu>
